# qfirmata

./: CMakeLists.txt  plugin.cpp
src/: firmata.cpp  firmata.h
src/pins/: pin.cpp  pin.h
